--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,11 @@
   </head>
 
   <body>
+    <div class="loader">
+    <div class="circle"></div>
+    <div class="circle"></div>
+  </div>
+  <section class="main">
     <header class="showcase">
       <div class="showcase-top">
         <img src="https://i.ibb.co/r5krrdz/logo.png" alt="Netflix" />
@@ -199,5 +204,6 @@
           </footer>
       </div>
     </section>
+  </section>
   </body>
 </html>
